# surf-rag

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: config-driven-workflows.md  config-inventory.md  evaluation_graph_retrieval.md  router_dual_task_guide.md
prompts/: answerability_audit.txt  generator.txt  generator_4.1-mini.txt  generator_4o-mini.txt  generator_improved.txt  generator_sentence_rerank.txt  generator_sentence_windows.txt  generator_simplified.txt  llm_ie_extraction.txt  llm_judge.txt
scripts/: align_2wiki_support.py  build_corpus.py  build_entity_matching_artifacts.py  create_soft_labels.py  discrepancy_debug_e2e.py  e2e_benchmark.py  fetch_wikipedia_articles.py  filter_benchmark_by_corpus.py  ingest_data.py  prepare_oracle_run.py  repair_router_benchmark_paths.py  setup_models.py  sweep_beta.py
tests/: _graph_test_utils.py  conftest.py  test_answerability_balance.py  test_answerability_layout.py  test_answerability_manifest.py  test_artifact_paths.py  test_audit_answerability_submit.py  test_batch_generation.py  test_batch_orchestrator_resume.py  test_build_corpus_control_flow.py  test_config_argv.py  test_config_loader.py  test_config_merge.py  test_config_merge_figures.py  test_config_oracle_objective.py  test_config_resolved_artifact.py  test_config_validate_prereqs.py  test_corpus_finalize.py  test_corpus_ie_retry.py  test_corpus_pipeline.py  test_dataset_builder_minimal.py  test_dense_strategy.py  test_discrepancy_debug_e2e.py  test_e2e_aggregation.py  test_e2e_benchmark_script.py  test_e2e_evaluate_answerability_audit.py  test_e2e_latency_runner.py  (+95 more)
(+227 files in other folders)
