[project]
name = "surf-rag"
version = "0.1.0"
description = "SuRF-RAG: Supervised Retrieval Fusion for Mixed-Reasoning QA"
authors = [
    {name = "LiamDemb",email = "dembliam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "surf_rag", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
